--- a/app/src/index.html
+++ b/app/src/index.html
@@ -18,14 +18,19 @@
 			<div class="titles flex-child">
 				<h1>Etnisch profileren in Amsterdam</h1>
 				<h2>Hoeveel gebeurt dat eigenlijk?</h2>
-				<p> Tegen etnisch profileren zijn al veel campagnes gevoerd. Echter is de mate waarin etnisch profileren nog steeds aanwezig is moeilijk vast te leggen in cijfers. Om toch een indicatie te geven van deze omvang is er onderzoek gedaan door Controle Alt Delete en Talentenlab.  Dit onderzoek vond plaats in Amsterdam in het najaar van 2019. De resultaten hiervan zijn te zien op deze pagina.
-
-Etnisch profileren gaat over het anders behandelen van iemand vanwege zijn herkomst. De respondenten van dit onderzoek zijn op herkomst gegroepeerd. Deze groepen zijn: Nederlanders zonder migratieachtergrond, Nederlanders met een niet-Westerse migratieachtergrond, Nederlanders met een westerse migratieachtergrond, en Nederlanders waarvan de herkomst onbekend is. Omdat met etnisch profileren vaak wordt gesproken over het anders behandelen van mensen met een niet-Wersterse migratieachtergrond, vergelijken we de eerste twee groepen voor de resultaten. De uitkomsten van het onderzoek zijn opgedeeld in onderwerpen. Per onderwerp zijn deze uitkomsten te bekijken.</p>
 			</div>
 			<div class="flex-child">
 			</div>
 		</div>
 	</header>
+
+<div class="container">
+	<p> Tegen etnisch profileren zijn al veel campagnes gevoerd. Echter is de mate waarin etnisch profileren nog steeds aanwezig is moeilijk vast te leggen in cijfers. Om toch een indicatie te geven van deze omvang is er onderzoek gedaan door Controle Alt Delete en Talentenlab.  Dit onderzoek vond plaats in Amsterdam in het najaar van 2019. De resultaten hiervan zijn te zien op deze pagina.
+	</p> <br>
+
+<p>Etnisch profileren gaat over het anders behandelen van iemand vanwege zijn herkomst. De respondenten van dit onderzoek zijn op herkomst gegroepeerd. Deze groepen zijn: Nederlanders zonder migratieachtergrond, Nederlanders met een niet-Westerse migratieachtergrond, Nederlanders met een westerse migratieachtergrond, en Nederlanders waarvan de herkomst onbekend is. Omdat met etnisch profileren vaak wordt gesproken over het anders behandelen van mensen met een niet-Wersterse migratieachtergrond, vergelijken we de eerste twee groepen voor de resultaten. De uitkomsten van het onderzoek zijn opgedeeld in onderwerpen. Per onderwerp zijn deze uitkomsten te bekijken.
+</p>
+</div>
 	<div class="video-container">
 		<video controls>
 		    <source src="images/Intro_animatie_V2_Compressed.mp4"
